// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Text component deve conseguir renderizar [snapshot] 1`] = `
<p
  className="sc-bdVaJa hCKHIO"
>
  Texto de teste
</p>
`;

exports[`Text component deve conseguir renderizar [snapshot] como tag H1 1`] = `
<h1
  className="sc-bdVaJa hCKHIO"
>
  Texto de teste 2
</h1>
`;

exports[`Text component deve conseguir renderizar [snapshot] como tag H1 e fontSize 15px 1`] = `
<h1
  className="sc-bdVaJa dsgeoZ"
  fontSize="15px"
>
  Texto de teste
</h1>
`;

exports[`Text component deve conseguir renderizar [snapshot] como warning 1`] = `
<p
  className="sc-bdVaJa irvhcf"
>
  Texto de teste
</p>
`;
